# qtcopy-files

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run
include/: dialogwindow.h  initapp.h  ui_dialogwindow.h  working_dir.h
qtcopy_files/: __init__.py  __main__.py  initapp.py  mainwindow.py
src/: dialogwindow.cpp  initapp.cpp  main.cpp
ui/: dialogwindow.ui  mainwindow.ui
