[tool.poetry]
name = "qtcopy-files"
version = "0.1.0"
description = "Copy files to wherever you want to"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qtcopy_files = 'qtcopy_files:main'